# 2013-HS-progtech

./: .gitignore  Makefile  ex01.tex  ex02.tex  ex03.tex  ex04.tex  ex05.tex  ex06.tex  ex07.tex  ex08.tex  ex09.tex  ex10.tex  ex11.tex  ex12.tex  ex13.tex  exa1.tex  exa10.tex  exa11.tex  exa12.tex  exa13.tex  exa2.tex  exa3.tex  exa4.tex  exa5.tex  exa6.tex  exa9.tex  exercises.tex  extrapackages.tex  layoutsetup-code.tex  layoutsetup.tex  lecture-examples.tex  macrosetup.tex  main.tex  questions.txt  series.tex  week1.tex  week10.tex  week11.tex  week12.tex  week13.tex  (+8 more)
lecture-code/examples/week10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  rng1.hpp  rng2.hpp  simpson.cpp  simpsontest
lecture-code/examples/week11/: CMakeLists.txt  add128.cpp  dot.hpp  profile.cpp
lecture-code/examples/week12/: CMakeLists.txt  etvector.hpp  factorial.cpp  lazyvector.hpp  lazyvectorflex.hpp  simplevector.hpp  timeet.cpp  timelazy2.cpp  timelazyflex2.cpp  timesimple.cpp  timesimple2.cpp  tinyvector.hpp  unruh.cpp
lecture-code/examples/week2/: add.cpp  add2.cpp  cast.cpp  pointer.cpp  pointer2.cpp  pointer3.cpp
lecture-code/examples/week4/: loopadd.ii  loopadd.s  simpleadd.ii  simpleadd.s
lecture-code/examples/week5/: minmacro.preprocessed  mintemplate.cpp
lecture-code/examples/week6/: array.hpp  bitarray.hpp  statistics.cpp
lecture-code/examples/week9/: MCIntegrators.nb  Random.nb  rng1.cpp  rng2.cpp  (+1 more)
lecture-code/exercises/ex05/solutions/simpson/src/: CMakeLists.txt  main.cpp  simpson.cpp  simpson.hpp
old/: week1-old.tex  week2-old.tex
(+99 files in other folders)
